<resources>
    <string name="app_name">IS4448</string>
    <string name="title_heroes">Heroes</string>
    <string name="title_covid_ireland">COVID-19 Updates</string>
    <string name="title_covid_global">COVID-19 Updates - Global</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add_hero">Add Hero</string>
    <string name="add_name">Hero\'s Name</string>
    <string name="real_name">Hero\'s Real Name</string>
    <string name="rating">Hero\'s Rating</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="teams">
        <item>Teams</item>
        <item>Avengers</item>
        <item>Justice League</item>
        <item>X-Men</item>
        <item>Fantastic Four</item>
    </string-array>
    <string-array name="rating">
        <item>Ratings</item>
        <item>1-star</item>
        <item>2-stars</item>
        <item>3-stars</item>
        <item>4-stars</item>
        <item>5-stars</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_edit_heroes">Edit Hero</string>
    <string name="ouch_something_went_wrong">Ouch Something Went Wrong</string>
    <string name="restart_app">Restart App</string>
    <string name="_404_error_image">404 Error Image</string>
</resources>